# jelly_kodi_sync

./: .credentials.template  .env  .gitignore  README.md  config.ini  docker-compose.yml  jelly_util.py  kodi_util.py  mongo_util.py  pyproject.toml  requirements.txt  sync_jelly_kodi  sync_jelly_kodi.py  utils.py
issues/: issue-001.md  issue-002.md  issue-003.md  issue-004.md
src/sync_jelly_kodi/: __main__.py  jelly_util.py  kodi_util.py  main.py  mongo_util.py  movie_archive.py  movie_rename.py  naming.py  sqlite_util.py  sync_ops.py  utils.py  web.py
systemd/: jelly_kodi_sync.service
tests/: verify_archive_watched.py  verify_issue-002.py  verify_movie_archive.py  verify_movie_rename.py  verify_refresh_spinner.py
