[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sync_jelly_kodi"
version = "0.2.0"
description = "A tool to synchronize watch status between Jellyfin and Kodi."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "kodipydent",
    "cachetools",
    "wakeonlan",
    "pure-python-adb",
    "typer>=0.20.1",
    "python-fasthtml>=0.14.9",
]

[project.scripts]
sync-jelly-kodi = "sync_jelly_kodi.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
